# phaze

./: .codecov.yml  .dockerignore  .env.example  .env.example.agent  .gitignore  .pip-audit-ignores  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  DOLT_REMOTE.md  Dockerfile  Dockerfile.agent-arm64  Dockerfile.job  README.md  agmmeu0dpcslucvva8c5f4vhcqdatiqm  docker-compose.agent.yml  docker-compose.cloud-agent.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  justfile  khcpeeforuodbr2tj4klal8dlcdafkft.darc  manifest  meaipgdibjporscosc96lrlkqtcpifhv.darc  osv-scanner.toml  pyproject.toml  ukivtvn1jboavarlrqtn7phb2ogrcska.darc  vulture_whitelist.py
.beads/: config.yaml  metadata.json
.github/: dependabot.yml
.github/workflows/: ci.yml  cleanup-images.yml  code-quality.yml  docker-publish.yml  docker-validate.yml  security.yml  tests.yml
.planning/: 2026.7.2-MILESTONE-AUDIT.md  2026.7.5-MILESTONE-AUDIT.md  MILESTONE-CONTEXT.md  MILESTONES.md  PROJECT.md  REQUIREMENTS-v7.0.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v3.0-MILESTONE-AUDIT.md  v5.0-MILESTONE-AUDIT.md  v6.0-MILESTONE-AUDIT.md
.planning/debug/: agent-image-missing-system-libs.md  analyze-4h-timeouts.md  run-analysis-payload-invalid.md
.planning/graphs/: GRAPH_REPORT.md  graph.html
.planning/milestones/: 2026.7.0-REQUIREMENTS.md  2026.7.0-ROADMAP.md  2026.7.1-MILESTONE-AUDIT.md  2026.7.1-REQUIREMENTS.md  2026.7.1-ROADMAP.md  2026.7.2-REQUIREMENTS.md  2026.7.5-REQUIREMENTS.md  PARALLEL-ENRICH-DAG-DESIGN.md  v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v3.0-REQUIREMENTS.md  v4.0-MILESTONE-AUDIT.md  v4.0-REQUIREMENTS.md  v4.0-ROADMAP.md  v5.0-REQUIREMENTS.md  v5.0-ROADMAP.md  v6.0-REQUIREMENTS.md  v6.0-ROADMAP.md  v7.0-MILESTONE-AUDIT.md  v7.0-REQUIREMENTS.md  v7.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/sketches/: MANIFEST.md
alembic/: env.py
alembic/staging/: 039_baseline_schema.py
alembic/versions/: 001_initial_schema.py  002_add_scan_batches_and_unique_path.py  003_add_file_companions_table.py  004_add_execution_log.py  005_add_metadata_columns.py  006_add_tracklist_tables.py  007_add_fingerprint_results_table.py  008_add_tracklist_source_status_confidence.py  009_add_search_vectors.py  010_add_discogs_links.py  011_add_tag_write_log.py  012_add_agents_table_and_backfill.py  013_enforce_agent_id_not_null_and_swap_uniqueness.py  014_add_last_status_to_agents.py  015_add_completed_at_to_scan_batches.py  016_backfill_scan_batches_completed_at.py  017_add_scan_batches_last_progress_at.py  018_add_analysis_window_table.py  019_add_proposals_pending_unique_index.py  020_add_pipeline_stage_control.py  021_add_analysis_coverage_columns.py  022_add_scheduling_ledger.py  023_add_scheduling_ledger_job_policy.py  024_add_agents_kind.py  025_add_cloud_job.py  026_add_cloud_job_kube_columns.py  027_add_cloud_job_cloud_phase.py  028_add_analysis_completed_at.py  029_add_cloud_job_backend_id.py  030_add_cloud_job_staging_bucket.py  031_add_route_control.py  032_add_derived_status_schema.py  033_add_analysis_completed_xor_failed.py  034_backfill_cloud_awaiting.py  035_reconcile_dedup_resolution.py  036_backfill_analysis_completed_at.py  037_add_stage_skip.py  038_retire_legacy_sentinel.py  039_baseline_schema.py  039_drop_files_state_column.py  (+7 more)
assets/src/: app.css
certs/: .gitkeep
design/: DESIGN_SYSTEM.md  resonant-precision.md  showcase.html
docs/: README.md  agent-queue-lanes.md  api.md  architecture.md  arm64-agent-image.md  cloud-burst.md  configuration.md  database.md  deployment.md  essentia-analysis.md  k8s-burst.md  multi-compute.md  project-structure.md  quick-start.md  runbook.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
models/: .gitkeep
prototype/code/: bpm-genre.py  characteristics.py  genre.py  models.txt
prototype/naming/: dirs.json  mp3rules4.1.txt
scripts/: analyze_browser_soak.py  backfill_mojibake_filenames.py  classify-changed-files.sh  coverage_floor.py  download-models.sh  download_models.sh  normalize_schema_dump.py  perf_analyze_workspace.py  perf_explain.py  seed_perf_corpus.py  update-project.sh
scripts/parity/: compare_analysis.py  dump_analysis.py  fingerprint_timeout_probe.sql  generate_reference.py
services/audfprint/: Dockerfile.audfprint  README.md  app.py  osv-scanner.toml  pyproject.toml
services/panako/: Dockerfile.panako  README.md  app.py  pyproject.toml
src/phaze/: __init__.py  analysis_child.py  cert_bootstrap.py  config.py  config_backends.py  constants.py  database.py  entrypoint.py  job_runner.py  logging_config.py  main.py
tests/: BUCKETS.md  _queue_fakes.py  _queue_fakes_test.py  _route_introspection.py  buckets.json  conftest.py  db_guard.py  kube_fakes.py  test_a11y_guards.py  test_base_html_sri.py  test_cert_bootstrap.py  test_config_role_split.py  test_config_worker.py  test_constants.py  test_dag_canvas_render.py  test_dead_template_guard.py  test_deterministic_key.py  test_docs_ia_current.py  test_enrich_analyze_workspaces.py  test_entrypoint.py  test_health.py  test_identify_workspaces.py  test_job_runner.py  test_logging_config.py  test_main_lifespan.py  test_migration_019_dedupe.py  test_models.py  test_no_auto_metadata_enqueue.py  test_no_default_queue_producers.py  test_phase01_gaps.py  test_phase02_gaps.py  test_phase03_gaps.py  test_phase04_gaps.py  test_pipeline_counters.py  test_pipeline_dag_context.py  test_process_file_scratch.py  test_proposals_upsert.py  test_push_pipeline.py  test_queue_factory.py  test_queue_fakes.py  (+12 more)
tests/agents/: test_rescan_preserves_state.py
tests/analyze/: _child_stubs.py  test_force_skip_writer.py  test_retry_affordances.py  test_skipped_leaves_pending.py
tests/discovery/: test_rescan_preserves_state.py
tests/fingerprint/: test_skipped_leaves_pending.py
tests/integration/: __init__.py  conftest.py  test_agent_push_concurrency.py  (+33 more)
(+2396 files in other folders)
