[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phaze"
version = "0.1.0"
description = "A music alignment tool"
license = "MIT"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.18.4",
    "saq[redis]>=0.26.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "cryptography>=48.0.0",
    "essentia-tensorflow>=2.1b6.dev1438; sys_platform != 'linux' or platform_machine == 'x86_64'",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    # Capped on purpose: litellm had a supply-chain attack (malicious 1.82.7/1.82.8,
    # Mar 2026) and ships frequent breaking minors, so CLAUDE.md mandates aggressive
    # pinning. The cap confines uv to the vetted 1.85.x line; raise it deliberately.
    "litellm>=1.85.0,<1.86.0",
    "lxml>=6.1.1",
    "mutagen>=1.47.0",
    "numpy>=2.4.6",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "rapidfuzz>=3.14.5",
    "sqlalchemy>=2.0.50",
    "sse-starlette>=3.4.4",
    "tenacity>=9.1.4",
    "uvicorn>=0.48.0",
    "watchdog>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/phaze"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require external services (database, redis, etc.)",
]

[tool.ruff]
line-length = 150
target-version = "py313"

[tool.ruff.lint]
select = [
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "PLC",  # pylint conventions
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
    "S",    # bandit security rules
    "SIM",  # flake8-simplify
    "T20",  # flake8-print (no print statements)
    "TCH",  # flake8-type-checking
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
    "W191", # indentation contains tabs (explicit tab detection)
]
fixable = ["ALL"]
unfixable = []
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E501",  # line too long, handled by ruff format
    "S101",  # use of assert detected (allow assert statements)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/phaze/main.py" = ["T201"]
"src/phaze/cli/**" = ["T201"]
"tests/**" = ["T201", "PLC", "S105", "ARG001"]
"services/**" = ["S603", "S607"]

[tool.ruff.lint.isort]
lines-after-imports = 2
combine-as-imports = true
split-on-trailing-comma = true
force-sort-within-sections = true
known-first-party = ["phaze"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
mypy_path = ["src"]
exclude = "^(tests/|prototype/|services/)"

[[tool.mypy.overrides]]
module = ["essentia", "essentia.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mutagen", "mutagen.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "phaze.services.agent_client"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = "phaze.services.agent_task_router"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
strict_equality = true

[tool.coverage.run]
source = ["phaze"]
omit = ["tests/*"]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
fail_under = 85
precision = 2
show_missing = true

# Environment restrictions for uv to avoid iOS and other incompatible platforms
[tool.uv]
environments = [
    # Only support Linux platforms that we build for in CI/CD
    "sys_platform == 'linux' and platform_machine == 'x86_64'",   # linux/amd64
    "sys_platform == 'linux' and platform_machine == 'aarch64'",  # linux/arm64
    # Also support local development on macOS
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",  # macOS Intel
    "sys_platform == 'darwin' and platform_machine == 'arm64'",   # macOS Apple Silicon
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pip-audit>=2.10.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.13",
]
