[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phaze"
version = "4.5.0"
description = "A music alignment tool"
license = "MIT"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "cryptography>=49.0.0",
    "essentia-tensorflow>=2.1b6.dev1438; sys_platform != 'linux' or platform_machine == 'x86_64'",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    # Capped on purpose: litellm had a supply-chain attack (malicious 1.82.7/1.82.8,
    # Mar 2026) and ships frequent breaking minors, so CLAUDE.md mandates aggressive
    # pinning. The cap confines uv to the vetted 1.85.x line; raise it deliberately.
    "litellm>=1.85.7,<1.86.0",
    "lxml>=6.1.1",
    "mutagen>=1.48.1",
    "numpy>=2.5.0",
    # v4.1.1 hotfix: saq[postgres] pulls bare `psycopg` (pure-Python), which needs a
    # libpq backend at import. The v4.1.0 slim image had none (no C ext, no binary
    # wheel, no system libpq) -> `ImportError: no pq wrapper available` crash-looped
    # phaze-api. `psycopg[binary]` bundles libpq (cp314 wheels exist for linux x86_64/
    # aarch64 + macos arm64); the Dockerfile also installs `libpq5` as a belt-and-
    # suspenders fallback for the pure-Python path.
    "pebble>=5.2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    # Direct dep since v4.0.1: config.py reads the configured `.env` for `<VAR>_FILE`
    # secret resolution. Already installed transitively via pydantic-settings' env_file
    # support; declared explicitly so the direct import is not a transitive accident.
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "rapidfuzz>=3.14.5",
    # Direct dep since Phase 36: dropping `saq[redis]` removes the transitive `redis`,
    # but `redis.asyncio` is imported directly across the codebase (cache_redis handle,
    # pipeline counters). Declared explicitly so the import is not a transitive accident.
    "redis>=7.4.1,<8.0",
    # Phase 36: postgres extra pulls psycopg[pool]>=3.2.0 for the PostgresQueue broker.
    "saq[postgres]>=0.26.4",
    "sqlalchemy>=2.0.51",
    "sse-starlette>=3.4.5",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.49.0",
    "watchdog>=6.0.0",
]

[project.scripts]
phaze = "phaze.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/phaze"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require external services (database, redis, etc.)",
]

[tool.ruff]
line-length = 150
target-version = "py313"

[tool.ruff.lint]
select = [
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "PLC",  # pylint conventions
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
    "S",    # bandit security rules
    "SIM",  # flake8-simplify
    "T20",  # flake8-print (no print statements)
    "TCH",  # flake8-type-checking
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
    "W191", # indentation contains tabs (explicit tab detection)
]
fixable = ["ALL"]
unfixable = []
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E501",  # line too long, handled by ruff format
    "S101",  # use of assert detected (allow assert statements)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/phaze/main.py" = ["T201"]
"src/phaze/cli/**" = ["T201"]
"scripts/parity/**" = ["T201"]
"tests/**" = ["T201", "PLC", "S105", "ARG001"]
"services/**" = ["S603", "S607"]

[tool.ruff.lint.isort]
lines-after-imports = 2
combine-as-imports = true
split-on-trailing-comma = true
force-sort-within-sections = true
known-first-party = ["phaze"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
mypy_path = ["src"]
exclude = "^(tests/|prototype/|services/)"

[[tool.mypy.overrides]]
module = ["essentia", "essentia.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mutagen", "mutagen.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "phaze.services.agent_client"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = "phaze.services.agent_task_router"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
strict_equality = true

[tool.coverage.run]
source = ["phaze"]
omit = ["tests/*"]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
fail_under = 85
precision = 2
show_missing = true

# Environment restrictions for uv to avoid iOS and other incompatible platforms
[tool.uv]
environments = [
    # Only support Linux platforms that we build for in CI/CD
    "sys_platform == 'linux' and platform_machine == 'x86_64'",   # linux/amd64
    "sys_platform == 'linux' and platform_machine == 'aarch64'",  # linux/arm64
    # Also support local development on macOS
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",  # macOS Intel
    "sys_platform == 'darwin' and platform_machine == 'arm64'",   # macOS Apple Silicon
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "greenlet>=3.5.3",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.20",
]
