[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phaze"
version = "2026.7.6"
description = "A music alignment tool"
license = "MIT"
requires-python = ">=3.14,<3.15"
dependencies = [
    # Phase 53 (KSTAGE-01..05): async S3 client the control plane uses to presign multipart
    # PUT + just-in-time GET URLs and to delete/abort staged objects. The control plane never
    # reads file bytes (DIST-01); it only orchestrates presigned URLs the agent/pod transfer over.
    "aioboto3>=15.5.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "cryptography>=49.0.0",
    "essentia-tensorflow>=2.1b6.dev1438; sys_platform != 'linux' or platform_machine == 'x86_64'",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    # Phase 54 (KSUBMIT-01): control-plane Kubernetes client. Submits suspended Kueue Jobs
    # via the kube API, watches them to completion, and reconciles their status. Lives on the
    # control plane ONLY (kube creds never reach the agent/pod, mirroring aioboto3). Verified
    # legitimate (kr8s-org, BSD-3-Clause, pure-Python) before install (T-54-SC).
    "kr8s>=0.20.15",
    # Capped on purpose: litellm had a supply-chain attack (malicious 1.82.7/1.82.8,
    # Mar 2026) and ships frequent breaking minors, so CLAUDE.md mandates aggressive
    # pinning. The cap confines uv to the vetted 1.85.x line; raise it deliberately.
    "litellm>=1.85.6,<1.86.0",
    "lxml>=6.1.1",
    "mutagen>=1.47.0",
    "numpy>=2.4.6",
    # v4.1.1 hotfix: saq[postgres] pulls bare `psycopg` (pure-Python), which needs a
    # libpq backend at import. The v4.1.0 slim image had none (no C ext, no binary
    # wheel, no system libpq) -> `ImportError: no pq wrapper available` crash-looped
    # phaze-api. `psycopg[binary]` bundles libpq (cp314 wheels exist for linux x86_64/
    # aarch64 + macos arm64); the Dockerfile also installs `libpq5` as a belt-and-
    # suspenders fallback for the pure-Python path.
    "pebble>=5.2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    # Direct dep since v4.0.1: config.py reads the configured `.env` for `<VAR>_FILE`
    # secret resolution. Already installed transitively via pydantic-settings' env_file
    # support; declared explicitly so the direct import is not a transitive accident.
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    # Phase 70 (MKUE-01): kube_staging parses inline kubeconfig YAML content into a dict for the
    # per-backend kr8s client. Already resolved transitively via the pinned kr8s -- declared
    # explicitly (hygiene) so a future kr8s dropping PyYAML cannot silently break the kubeconfig
    # parse. Floor at the currently-resolved 6.0.3 (>=7 days old, exclude-newer cooldown satisfied).
    "PyYAML>=6.0.3",
    "rapidfuzz>=3.14.5",
    # Direct dep since Phase 36: dropping `saq[redis]` removes the transitive `redis`,
    # but `redis.asyncio` is imported directly across the codebase (cache_redis handle,
    # pipeline counters). Declared explicitly so the import is not a transitive accident.
    "redis>=8.0.0,<9.0",
    # Phase 36: postgres extra pulls psycopg[pool]>=3.2.0 for the PostgresQueue broker.
    "saq[postgres]>=0.26.4",
    "sqlalchemy>=2.0.51",
    "sse-starlette>=3.4.5",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.49.0",
    "watchdog>=6.0.0",
]

[project.scripts]
phaze = "phaze.cli:main"

[tool.coverage.report]
fail_under = 95
precision = 2
show_missing = true

[tool.coverage.run]
concurrency = ["greenlet", "thread"]
omit = ["tests/*"]
relative_files = true
source = ["phaze"]

[tool.hatch.build.targets.wheel]
packages = ["src/phaze"]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = "^(tests/|prototype/|services/|vulture_whitelist\\.py)"
mypy_path = ["src"]
no_implicit_optional = true
python_version = "3.14"
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["essentia", "essentia.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mutagen", "mutagen.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aioboto3", "aioboto3.*", "aiobotocore", "aiobotocore.*", "botocore", "botocore.*"]
ignore_missing_imports = true

# PyYAML ships no py.typed / stubs bundled; kube_staging parses inline kubeconfig content via yaml.safe_load.
[[tool.mypy.overrides]]
module = ["yaml", "yaml.*"]
ignore_missing_imports = true

# Playwright is never a project dependency (ephemeral `uv run --with playwright`, per the
# milestone's zero-new-dependencies constraint) -- scripts/analyze_browser_soak.py (Phase 95,
# phaze-zqvh.5) is the sole consumer, run manually against a live dev instance, never in CI.
[[tool.mypy.overrides]]
module = ["playwright", "playwright.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "phaze.services.agent_client"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
strict_equality = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "phaze.services.agent_task_router"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
strict_equality = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require external services (database, redis, etc.)",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 150
target-version = "py313"

[tool.ruff.format]
docstring-code-format = false
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E501",  # line too long, handled by ruff format
    "S101",  # use of assert detected (allow assert statements)
]
select = [
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "PLC",  # pylint conventions
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
    "S",    # bandit security rules
    "SIM",  # flake8-simplify
    "T20",  # flake8-print (no print statements)
    "TCH",  # flake8-type-checking
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
    "W191", # indentation contains tabs (explicit tab detection)
]
unfixable = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["phaze"]
lines-after-imports = 2
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"scripts/parity/**" = ["T201"]
"services/**" = ["S603", "S607"]
"src/phaze/cli/**" = ["T201"]
"src/phaze/main.py" = ["T201"]
"tests/**" = ["T201", "PLC", "S105", "ARG001"]

[tool.uv]
# Supply-chain cooldown: refuse to resolve any package published in the last 7 days.
# Freshly published versions are the 1.82.7/1.82.8 malicious-release risk class, so we
# wait out a cooldown before they can enter a lockfile. The window is relative ("7
# days") rather than a pinned date so it rolls forward on its own; every dependency
# floor is deliberately kept at a release already older than the window so resolution
# stays satisfiable (a floor newer than 7 days would make `uv lock` fail). Adopt newer
# releases by waiting out the cooldown or, when urgent, vetting and overriding via
# `exclude-newer-package`. `scripts/update-project.sh` re-asserts this across manifests.
exclude-newer = "7 days"
environments = [
    # Only support Linux platforms that we build for in CI/CD
    "sys_platform == 'linux' and platform_machine == 'x86_64'",   # linux/amd64
    "sys_platform == 'linux' and platform_machine == 'aarch64'",  # linux/arm64
    # Also support local development on macOS
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",  # macOS Intel
    "sys_platform == 'darwin' and platform_machine == 'arm64'",   # macOS Apple Silicon
]
constraint-dependencies = [
    # setuptools 82.0.1 carries PYSEC-2026-3447 (macOS APFS/HFS+ NFD filename bypasses an NFC
    # MANIFEST.in exclude when packing an sdist); fixed in 83.0.0 (published 2026-07-04, already
    # past the 7-day cooldown). setuptools is only a transitive test dependency (via moto), so
    # floor it here to keep pip-audit clean without promoting it to a direct dependency.
    "setuptools>=83.0.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "greenlet>=3.5.2",
    "httpx>=0.28.1",
    # Phase 53: S3 mock so the staging leg (presign/upload/delete) is testable without a
    # live S3 backend or cluster. The [server] extra (flask/werkzeug) provides
    # ThreadedMotoServer -- required because aioboto3/aiobotocore's async response parsing
    # is incompatible with moto's in-process `mock_aws`, so the SDK must talk real HTTP to a
    # wire-compatible moto server (this is what makes presigned-URL round-trips testable).
    "moto[server]>=5.1.0",
    "mypy>=2.1.0",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "respx>=0.23.1",
    "ruff>=0.15.18",
    "vulture>=2.16",
]
