[project]
name = "panako-service"
version = "0.1.0"
description = "FastAPI wrapper for Panako audio fingerprinting"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
]

[tool.uv]
# Supply-chain cooldown: refuse to resolve packages published in the last 7 days.
# Kept identical to the root pyproject.toml window so every package manifest in the
# repo applies the same cooldown; `scripts/update-project.sh` keeps them in sync.
exclude-newer = "7 days"
